--- a/OpenNspw/OpenNspw.csproj
+++ b/OpenNspw/OpenNspw.csproj
@@ -6,6 +6,7 @@
     <TieredCompilation>false</TieredCompilation>
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
