--- a/OpenNspw.Interop/OpenNspw.Interop.csproj
+++ b/OpenNspw.Interop/OpenNspw.Interop.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
